--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,9 @@
   "dependencies": {
     "@prisma/client": "^6.18.0",
     "@prisma/extension-accelerate": "^2.0.2",
+    "@types/jsonwebtoken": "^9.0.10",
     "elysia": "^1.4.13",
+    "elysia-oauth2": "^2.1.0",
     "jsonwebtoken": "^9.0.2",
     "octokit": "^5.0.4"
   }
