--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "@prisma/client": "^6.18.0",
     "@prisma/extension-accelerate": "^2.0.2",
     "@types/jsonwebtoken": "^9.0.10",
+    "bullmq": "^5.62.0",
     "elysia": "^1.4.13",
     "elysia-oauth2": "^2.1.0",
     "jsonwebtoken": "^9.0.2",
